prevents mobile home from shifting down typed text

--- a/main.css
+++ b/main.css
@@ -449,6 +449,7 @@ a.resume {
 
 /* Home section background */
 .home {
+  min-height: 100vh; 
   background-color: #000;
   background-size: cover;
   background-position: center center;
